# jsparagus

./: .gitignore  Cargo.toml  foo  foo2  known_good_mc  latest_mc  update_opcodes.py  update_unicode.py
.github/workflows/: ci-generated.yml
crates/ast/src/: dump_generated.rs  source_location_accessor_generated.rs  type_id_generated.rs  types_generated.rs  visit_generated.rs
crates/driver/src/: demo.rs
crates/emitter/src/: ast_emitter.rs  emitter.rs  emitter_scope.rs  function_declaration_emitter.rs  lib.rs  reference_op_emitter.rs
crates/generated_parser/src/: ast_builder.rs  parser_tables_generated.rs  stack_value_generated.rs
crates/interpreter/src/: evaluate.rs  tests.rs
crates/scope/src/: builder.rs  data.rs  pass.rs
crates/stencil/src/: function.rs  scope.rs  script.rs
examples/: demo.rs
js_parser/: es-simplified.esgrammar  parse_esgrammar.py
jsparagus/: actions.py  grammar.py  rewrites.py
src/: lib.rs
tests/: test.py
