[package]
name = "jsparagus"
authors = ["The jsparagus Project Developers"]
version = "0.1.0"
description = "A JavaScript parser"
license = "MIT/Apache-2.0"
repository = "https://github.com/mozilla-spidermonkey/jsparagus"
publish = false
edition = "2018"

[workspace]

[lib]

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
jsparagus-ast = { path = "crates/ast" }
jsparagus-emitter = { path = "crates/emitter" }
jsparagus-generated-parser = { path = "crates/generated_parser" }
jsparagus-parser = { path = "crates/parser" }
jsparagus-interpreter = { path = "crates/interpreter" }

[dev-dependencies]
bumpalo = "2.6.0"
rustyline = "6.0.0"
rustyline-derive = "0.3.0"

[profile.release]
debug = true  # enable debug symbols in release builds
